--- a/express-js-personal-website-with-db/views/index.ejs
+++ b/express-js-personal-website-with-db/views/index.ejs
@@ -1,6 +1,11 @@
 <html>
     <head>
         <%- include('layout/head'); -%>
+        <style>
+            .active {
+                color: green !important;
+            }
+        </style>
     </head>
     <body>
         <body data-new-gr-c-s-check-loaded="14.1026.0" data-gr-ext-installed="">
@@ -9,25 +14,30 @@
         
                 <div class="jumbotron p-3 p-md-5 text-white rounded bg-dark">
                     <div class="col-md-6 px-0">
-                        <h1 class="display-4 font-italic">Title of a longer featured blog post</h1>
-                        <p class="lead my-3">Multiple lines of text that form the lede, informing new readers quickly and
-                            efficiently about what's most interesting in this post's contents.</p>
-                        <p class="lead mb-0"><a href="#" class="text-white font-weight-bold">Continue reading...</a></p>
+                        <h1 class="display-4 font-italic">
+                            <%= posts[0].title %>
+                        </h1>
+                        <p class="lead my-3">
+                            <%= posts[0].description.substr(0,100) %>
+                        </p>
+                        <p class="lead mb-0"><a href="/post/<%= posts[0].id %>" class="text-white font-weight-bold">Continue reading...</a></p>
                     </div>
                 </div>
         
                 <div class="row mb-2">
-                    <% posts.forEach(function(post) { %>
+                    <% posts.slice(1,posts.length).forEach(function(post) { %>
                         <div class="col-md-6">
                             <div class="card flex-md-row mb-4 box-shadow h-md-250">
                             <div class="card-body d-flex flex-column align-items-start">
-                                <strong class="d-inline-block mb-2 text-primary">World</strong>
+                                <strong class="d-inline-block mb-2 text-primary">
+                                    <%= categories[posts[0].category_id + 1].name %>
+                                </strong>
                                 <h3 class="mb-0">
                                 <a class="text-dark" href="/posts/<%= post.id %>"><%= post.title.substr(0,10) %></a>
                                 </h3>
                                 <div class="mb-1 text-muted"><%= post.created_at %></div>
                                 <p class="card-text mb-auto"><%= post.description.substr(0,10) %></p>
-                                <a href="/posts/<%= post.id %>">Continue reading</a>
+                                <a href="/post/<%= post.id %>">Continue reading</a>
                             </div>
                             <img class="card-img-right flex-auto d-none d-md-block"
                                 alt="Thumbnail"
