--- a/express-js-personal-website-with-db/views/layout/header.ejs
+++ b/express-js-personal-website-with-db/views/layout/header.ejs
@@ -3,7 +3,7 @@
         <div class="col-4 pt-1">
         </div>
         <div class="col-4 text-center">
-            <a class="blog-header-logo text-dark" href="#">Ehsan Gazar Blog</a>
+            <a class="blog-header-logo text-dark" href="/">Ehsan Gazar Blog</a>
         </div>
         <div class="col-4 d-flex justify-content-end align-items-center">
 
@@ -13,8 +13,8 @@
 
 <div class="nav-scroller py-1 mb-2">
     <nav class="nav d-flex justify-content-between">
-        <% categories.forEach(function(category){ %>
-            <a class="p-2 text-muted" href="#"><%= category %></a>
+        <% categories.forEach(function(category, index){ %>
+            <a class="p-2 text-muted <% if(index === activeId-1) { %> active <% } %>" href="/category/<%=index+1%>"><%= category %></a>
         <% }); %>
     </nav>
 </div>
