--- a/express-js-personal-website-with-db/views/index.ejs
+++ b/express-js-personal-website-with-db/views/index.ejs
@@ -30,7 +30,7 @@
                             <div class="card flex-md-row mb-4 box-shadow h-md-250">
                             <div class="card-body d-flex flex-column align-items-start">
                                 <strong class="d-inline-block mb-2 text-primary">
-                                    <%= categories[posts[0].category_id + 1].name %>
+                                    
                                 </strong>
                                 <h3 class="mb-0">
                                 <a class="text-dark" href="/posts/<%= post.id %>"><%= post.title.substr(0,10) %></a>
@@ -46,14 +46,22 @@
                             </div>
                         </div>
                         <% }); %>
-
+                        <div class="d-flex w-100 justify-content-center align-items-center">
+                        <nav aria-label="Page navigation example">
+                            <ul class="pagination">
+                                <% pages = (counts / 11) %>
+                                <% for(let i = 0; i < pages ; i ++) { %> 
+                                    <li class="page-item"><a class="page-link" href="?page=<%= i+1 %> "><%= i+1 %></a></li>
+                                <% } %> 
+                            </ul>
+                        </nav>
+                    </div>
                 </div>
             </div>
         
             <main role="main" class="container">
                 <div class="row">
-                    <div class="col-md-8 blog-main">
-                        <h3 class="pb-3 mb-4 font-italic border-bottom">
+                    <div class="col-md-8 blog-main">                        <h3 class="pb-3 mb-4 font-italic border-bottom">
                             From the Firehose
                         </h3>
         
