--- a/express-js-personal-website-with-db/views/layout/header.ejs
+++ b/express-js-personal-website-with-db/views/layout/header.ejs
@@ -1,12 +1,23 @@
 <header class="blog-header py-3">
     <div class="row flex-nowrap justify-content-between align-items-center">
-        <div class="col-4 pt-1">
+       <div class="col-4 pt-1">
+            <a href="/login">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="button">Login</button>
+            </a>
+            <a href="/signup">
+                <button class="btn btn-success my-2 my-sm-0" type="button">Signup</button>
+            </a>
         </div>
         <div class="col-4 text-center">
             <a class="blog-header-logo text-dark" href="/">Ehsan Gazar Blog</a>
         </div>
         <div class="col-4 d-flex justify-content-end align-items-center">
-
+            <nav class="navbar navbar-light">
+                <form class="form-inline my-sm-0" action="/search">
+                    <input name="q" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                </form>
+            </nav>
         </div>
     </div>
 </header>
